--- a/src/app/scene/home/project/update-project/update-project.component.html
+++ b/src/app/scene/home/project/update-project/update-project.component.html
@@ -23,14 +23,14 @@
                                 <div class="inner-addon right-addon">
                                     <label for="card-holder">Started Date</label>
                                     <input type="datetime-local" id="end" name="trip-start" value="currentDate"
-                                    min="currentDate" max="2025-12-31"  [(ngModel)]="data.startedDate" name="startedDate">
+                                     [(ngModel)]="data.startedDate" name="startedDate">
                                 </div>
                             </div>
                             <div class="form-group col-sm-8">
                                 <div class="inner-addon right-addon">
                                     <label for="card-number">End Date</label>
                                     <input type="datetime-local" id="end" name="trip-start" value="currentDate"
-                                    min="currentDate" max="2025-12-31" [(ngModel)]="data.endDate" name="endDate">
+                                     [(ngModel)]="data.endDate" name="endDate">
                                 </div>
                             </div>
                             <div class="form-group col-sm-4">
@@ -52,7 +52,7 @@
                     <img height="250px" width="250px"   src="assets/logo.png"  />
                </div>
             </div>
-            
+
             <!--/col-lg-6 -->
 
         </div>
