--- a/src/app/scene/home/task/create-task/create-task.component.html
+++ b/src/app/scene/home/task/create-task/create-task.component.html
@@ -2,8 +2,8 @@
 
 <div class="container bootdey">
     <div class="card-header">
-        <button (click)="close()" style="color: white;" type="button" class="btn btn-tool pull-right"
-            data-card-widget="remove"><i class="fas fa-times"></i>
+        <button (click)="close()" class="btn btn-tool pull-right" data-card-widget="remove" style="color: white;"
+                type="button"><i class="fas fa-times"></i>
         </button>
         <h5>New Task</h5>
 
@@ -12,21 +12,13 @@
 
 
         <main>
-            <form [formGroup]="addTaskForm" (ngSubmit)="onSubmit()">
-
-
-
-
+            <form (ngSubmit)="onSubmit()" [formGroup]="addTaskForm">
                 <div class="form-row">
-
-
-
-
                     <div class="form-group col-4">
                         <label class="col-4 col-sm-11">title : </label>
                         <div class="col-10 col-sm-11">
-                            <input type="text" formControlName="taskName" class="form-control"
-                                [ngClass]="{ 'is-invalid': submitted && f.taskName.errors }" />
+                            <input [ngClass]="{ 'is-invalid': submitted && f.taskName.errors }" class="form-control" formControlName="taskName"
+                                   type="text"/>
                             <div *ngIf="submitted && f.taskName.errors" class="invalid-feedback">
                                 <div *ngIf="f.taskName.errors.required">title is required</div>
                             </div>
@@ -35,14 +27,12 @@
 
                     <div class="form-group col-4">
                         <label class="col-4 col-sm-11">Choose Member :</label>
-
                         <div class="col-10 col-sm-11">
-
-                            <select formControlName="idMember" class="form-control"
-                                [ngClass]="{ 'is-invalid': submitted && f.idMember.errors }">
-                                <option *ngFor="let member of members" [value]="member.id"> {{member.user.firstName}}
-                                    {{member.user.lastName}} </option>
-
+                            <select [ngClass]="{ 'is-invalid': submitted && f.idMember.errors }" class="form-control"
+                                    formControlName="idMember">
+                                <option *ngFor="let member of members" [value]="member.id"> {{ member.user.firstName }}
+                                    {{ member.user.lastName }}
+                                </option>
                             </select>
                             <div *ngIf="submitted && f.idMember.errors" class="invalid-feedback">
                                 <div *ngIf="f.idMember.errors.required">choose member please!</div>
@@ -50,14 +40,15 @@
                         </div>
                     </div>
 
-                    <div  class="form-group col-4">
-                        <label class="col-4 col-sm-11">Status : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i (click)="showFormStatus()"  class="fas fa-plus"></i></label>
+                    <div class="form-group col-4">
+                        <label class="col-4 col-sm-11">Status : <i (click)="showFormStatus()" class="fas fa-plus"></i></label>
                         <div *ngIf="!showForm" class="col-10 col-sm-11">
 
-                            <select formControlName="idStatus" class="form-control" placeholder="Status"
-                                [ngClass]="{ 'is-invalid': submitted && f.idStatus.errors }">
+                            <select [ngClass]="{ 'is-invalid': submitted && f.idStatus.errors }" class="form-control" formControlName="idStatus"
+                                    placeholder="Status">
                                 <option *ngFor="let status of stateGroup " [value]="status.statusDescritpion">
-                                    {{status?.statusDescritpion}}</option>
+                                    {{ status?.statusDescritpion }}
+                                </option>
 
                             </select>
 
@@ -67,28 +58,26 @@
                             </div>
 
 
-
                         </div>
 
                         <div *ngIf="showForm" class="col-10 col-sm-11">
                             <!--<form  [formGroup]="statusForm" (ngSubmit)="addStatus()">
                                 <div class="input-group input-group-sm">-->
-                                    <input formControlName="idStatus" class="form-control " type="content"
-                                         aria-label="statut">
-                                   
-                              <!--  </div>
-                           </form>-->
+                            <input aria-label="statut" class="form-control " formControlName="idStatus"
+                                   type="content">
+
+                            <!--  </div>
+                         </form>-->
                         </div>
 
 
-
                     </div>
-                   <!---- -->
+                    <!---- -->
                     <div class="form-group col-4">
                         <label class="col-4 col-sm-11">Priority :</label>
                         <div class="col-10 col-sm-11">
-                            <select formControlName="priority" class="form-control" placeholder="Priority"
-                                [ngClass]="{ 'is-invalid': submitted && f.priority.errors }">
+                            <select [ngClass]="{ 'is-invalid': submitted && f.priority.errors }" class="form-control" formControlName="priority"
+                                    placeholder="Priority">
                                 <option value="highPriority">highPriority</option>
                                 <option value="mediumPriority">mediumPriority</option>
                                 <option value="lowPriority">lowPriority</option>
@@ -100,15 +89,13 @@
                     </div>
 
 
-
-
                     <div class="form-group col-4">
 
                         <label class="col-4 col-sm-11">Started Date : </label>
                         <div class="col-10 col-sm-11">
-                            <input type="datetime-local" id="start" name="trip-start" value="currentDate"
-                                min="currentDate" max="2025-12-31" formControlName="startedDate" class="form-control"
-                                [ngClass]="{ 'is-invalid': submitted && f.startedDate.errors }">
+                            <input [ngClass]="{ 'is-invalid': submitted && f.startedDate.errors }" class="form-control" formControlName="startedDate" id="start"
+                                   max="2025-12-31" min="currentDate" name="trip-start" type="datetime-local"
+                                   value="currentDate">
 
                             <div *ngIf="submitted && f.startedDate.errors" class="invalid-feedback">
                                 <div *ngIf="f.startedDate.errors.required">enter started date</div>
@@ -122,9 +109,10 @@
 
                         <label class="col-4 col-sm-11">Due Date : </label>
                         <div class="col-10 col-sm-11">
-                            <input type="datetime-local" id="start" name="trip-start" value="currentDate"
-                                min="currentDate" max="2025-12-31" formControlName="deleveryDate" class="form-control"
-                                [ngClass]="{ 'is-invalid': submitted && f.deleveryDate.errors }">
+                            <input [ngClass]="{ 'is-invalid': submitted && f.deleveryDate.errors }" class="form-control" formControlName="deleveryDate" id="start"
+                                   max="2025-12-31" min="currentDate" name="trip-start"
+                                   type="datetime-local"
+                                   value="currentDate">
 
                             <div *ngIf="submitted && f.deleveryDate.errors" class="invalid-feedback">
                                 <div *ngIf="f.deleveryDate.errors.required">enter due date</div>
@@ -144,14 +132,15 @@
                 <div class="row">
                     <div class="col-sm-12 ml-auto">
                         <div class="form-group mt-4">
-                            <textarea formControlName="descriptionTask" class="form-control" id="message" name="body"
-                                rows="12" placeholder="Click here to reply"></textarea>
+                            <textarea class="form-control" formControlName="descriptionTask" id="message" name="body"
+                                      placeholder="Click here to reply" rows="12"></textarea>
                         </div>
                         <div class="text-center">
                             <button class="btn btn-sm float right  ">Save Task</button>
                             &nbsp;
-                            <button class="btn btn-sm   " style="background-color: crimson; " type="reset"
-                                (click)="close()">Cancel</button>
+                            <button (click)="close()" class="btn btn-sm   " style="background-color: crimson; "
+                                    type="reset">Cancel
+                            </button>
 
                         </div>
                     </div>
